--- a/src/content/docs/guides/inputs.mdx
+++ b/src/content/docs/guides/inputs.mdx
@@ -1,13 +1,13 @@
 ---
 title: Inputs
-description: nf-pediatric inputs
+description: sf-pediatric inputs
 ---
 
 import { FileTree } from '@astrojs/starlight/components';
 
 ### **BIDS input directory**
 
-The [BIDS (Brain Imaging Data Structure)](https://bids-specification.readthedocs.io/en/stable/) input directory is a standardized way to organize and describe neuroimaging and behavioral data. The nf-pediatric pipeline expects the input data to be organized in the BIDS format. Good resources to convert your raw DICOMs files in a BIDS structure include [dcm2bids](https://unfmontreal.github.io/Dcm2Bids/3.2.0/) and/or [heudiconv](https://heudiconv.readthedocs.io/en/latest/). It is recommended that users validate their BIDS layout using the official [bids-validator tool](https://hub.docker.com/r/bids/validator) docker image or the [web-based version](https://bids-standard.github.io/bids-validator/).
+The [BIDS (Brain Imaging Data Structure)](https://bids-specification.readthedocs.io/en/stable/) input directory is a standardized way to organize and describe neuroimaging and behavioral data. The sf-pediatric pipeline expects the input data to be organized in the BIDS format. Good resources to convert your raw DICOMs files in a BIDS structure include [dcm2bids](https://unfmontreal.github.io/Dcm2Bids/3.2.0/) and/or [heudiconv](https://heudiconv.readthedocs.io/en/latest/). It is recommended that users validate their BIDS layout using the official [bids-validator tool](https://hub.docker.com/r/bids/validator) docker image or the [web-based version](https://bids-standard.github.io/bids-validator/).
 
 ### **Directory Structure**
 
@@ -37,7 +37,7 @@ The most basic BIDS directory should have a similar structure (note that session
 ### **Required Files**
 
 - `dataset_description.json`: A JSON file describing the dataset.
-- `participants.tsv`: A TSV file listing the participants and their metadata. **`nf-pediatric` requires the participants' age to be supplied within this file, using `age` as the column name. If not available, the pipeline will return an error at runtime.**
+- `participants.tsv`: A TSV file listing the participants and their metadata. **`sf-pediatric` requires the participants' age to be supplied within this file, using `age` as the column name. If not available, the pipeline will return an error at runtime.**
 
 :::caution[Important!]
 The age can be specified using either **post conceptual age** (only recommended for infant data, for participants > 44 weeks post-conceptual age, users should supply age in years) or **years**. If multiple session are available for a single subject, each session needs to be entered in **different rows**.
@@ -53,7 +53,7 @@ The age can be specified using either **post conceptual age** (only recommended 
 | ...            | ...          | ... |
 
 :::note[Column separator]
-In order for `nf-pediatric` to properly read the `participants.tsv` file, columns need to be **tab-separated**. If the pipeline returns an error regarding age not being correctly entered, this should be the **first validation step** to take (e.g., ensure a single tab is separating each of your columns).
+In order for `sf-pediatric` to properly read the `participants.tsv` file, columns need to be **tab-separated**. If the pipeline returns an error regarding age not being correctly entered, this should be the **first validation step** to take (e.g., ensure a single tab is separating each of your columns).
 :::
 
 
