--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: <b>Welcome to the nf-pediatric documentation</b>
+title: <b>Welcome to the sf-pediatric documentation</b>
 head:
   - tag: title
-    content: nf-pediatric documentation
+    content: sf-pediatric documentation
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
@@ -12,22 +12,22 @@ hero:
     dark: ../../assets/logo_dark.svg
   actions:
     - text: Installation
-      link: /nf-pediatric/guides/installation
+      link: /sf-pediatric/guides/installation
       icon: laptop
     - text: Inputs
-      link: /nf-pediatric/guides/inputs
+      link: /sf-pediatric/guides/inputs
       icon: seti:plan
       variant: 'secondary'
     - text: Usage
-      link: /nf-pediatric/guides/usage
+      link: /sf-pediatric/guides/usage
       icon: seti:info
       variant: 'secondary'
     - text: Outputs
-      link: /nf-pediatric/guides/outputs
+      link: /sf-pediatric/guides/outputs
       icon: external
       variant: 'secondary'
     - text: How to cite
-      link: /nf-pediatric/reference/citation
+      link: /sf-pediatric/reference/citation
       icon: pen
       variant: 'minimal'
 ---
