--- a/src/content/docs/guides/outputs.mdx
+++ b/src/content/docs/guides/outputs.mdx
@@ -11,12 +11,14 @@ The directories listed below will be created in the results directory after the 
 - sf-pediatric-v0.1.0/
   - dataset_description.json
   - multiqc/
+  - participants.tsv
   - sub-0001/
     - ses-session/
       - anat/
       - dwi/
       - figures/
       - multiqc/
+      - xfm/
     - ses-session2/
   - sub-0002/
     - ses-session/
@@ -24,6 +26,7 @@ The directories listed below will be created in the results directory after the 
       - dwi/
       - figures/
       - multiqc/
+      - xfm/
     - ses-session2/
   - ...
 </FileTree>
@@ -34,206 +37,249 @@ If you decided to run FreeSurfer (both recon-all or recon-all-clinical), FastSur
 
 <FileTree>
 - sf-pediatric-v0.1.0/
-  - multiqc
-  - sub-0001
-  - sub-0002
+  - dataset_description.json
+  - multiqc/
+  - participants.tsv
+  - sub-0001/
+  - sub-0002/
   - ...
-- fastsurfer-v2.3.3/
-  - sub-0001
-  - sub-0002
+- freesurfer/
+  - sub-0001/
+  - sub-0002/
   - ...
 </FileTree>
 
 ### **Pipeline overview**
 
-The pipeline is built using [Nextflow](https://www.nextflow.io/) and data processing steps can be grouped. The final output files are listed below for each of those steps. If you used `--lean_output false`, you will find additional files than the ones described here (**not recommended**, this will highly increase the number of output files).
+The pipeline's outputs are organized by subject and session in a BIDS-like structure. Below is a description of the output files organized by subfolder. If you used [`--lean_output false`](/sf-pediatric/guides/parameters#generic-options), you will find additional files than the ones described here (**not recommended**, this will highly increase the number of output files).
 
 :::note[Sidecar JSON files]
-In addition to the output files described below, you will also find **sidecar JSON file** for nifti volumes. Those will contain informations regarding their source (either raw or processed), the applied transforms, and/or processing steps.
+In addition to the output files described below, you will also find **sidecar JSON files** for nifti volumes. Those will contain information regarding their source (either raw or processed), the applied transforms, and/or processing steps.
 :::
 
-- [T1w/T2w Preprocessing](#t1wt2w-preprocessing) - Preprocess anatomical images (denoising, normalization, etc.)
-- [DWI Preprocessing](#dwi-preprocessing) - Preprocess DWI images (denoising, susceptibility correction, normalization, etc.)
-- [Local Modelling](#local-modelling) - Fit DTI and fODF models based on the diffusion signal.
-- [Registration](#registration) - Register the T1w/T2w images in diffusion space.
-- [Segmentation](#segmentation) - Perform anatomical segmentation of tissues.
-- [Tractography](#tractography) - Perform either local or PFT tracking.
-- [Connectomics](#connectomics) - Perform tractogram segmentation, filtering, and metrics computation.
-- [FreeSurfer](#freesurfer) - Perform T1w reconstruction using FreeSurfer and map the Brainnetome Child atlas in subject space.
-- [MultiQC](#multiqc) - Gather run informations, provide methods boilerplate and software versions list.
-- [Pipeline information](#pipeline-information) - Report metrics generated during the workflow execution
+## Output directories
 
-### **T1w/T2w Preprocessing**
+- [Root-level outputs](#root-level-outputs) - Population-level statistics and metadata
+- [anat](#anat) - Anatomical preprocessing, segmentation, and parcellation outputs
+- [dwi](#dwi) - Diffusion preprocessing, local modeling, tractography, and connectivity outputs
+- [figures](#figures) - Quality control visualizations
+- [xfm](#xfm) - Spatial transformations between image spaces
+- [multiqc](#multiqc) - Subject-level quality control reports. For a complete guide on how to navigate this report, please refer to
+[this section](/sf-pediatric/guides/qc).
 
-<details markdown="1">
-<summary>Output files</summary>
+---
 
-- `anat/`
-  - `*_desc-preproc_T1w.nii.gz`: Final preprocessed T1w image in original space.
-  - `*_desc-preproc_T2w.nii.gz`: Final preprocessed T2w image in original space.
-  - `*_space-T2w_desc-preproc_T1w.nii.gz`: Final preprocessed T1w image in T2w space (if infant data).
-  - `*_space-T1w_desc-preproc_T2w.nii.gz`: Final preprocessed T2w image in T1w space (if pediatric data).
-  - `*_from-{T1w,T2w}_to-{T1w,T2w}_affine.mat`: Affine transform from T1w/T2w to T1w/T2w space.
-  - `*_space-{template}_desc-preproc_T1w.nii.gz`: Final preprocessed T1w image in template space (if a destination template has been selected).
-  - `*_space-{template}_desc-preproc_T2w.nii.gz`: Final preprocessed T2w image in template space (if a destination template has been selected).
-  - `*_from-dwi_to-{template}_affine.mat`: Affine transform from T1w/T2w to template space.
-  - `*_from-dwi_to-{template}_warp.nii.gz`: Non-linear transform from T1w/T2w to template space.
+## **Root-level outputs**
 
-</details>
-
-### **DWI Preprocessing**
+The root output directory contains population-level files located alongside subject folders:
 
 <details markdown="1">
 <summary>Output files</summary>
 
-- `dwi/`
-  - `*_desc-preproc_dwi.nii.gz`: Final preprocessed DWI image in original space.
-  - `*_desc-preproc_dwi.bval`: Final b-values file.
-  - `*_desc-preproc_dwi.bvec`: Final corrected b-vectors file.
-  - `*_desc-preproc_b0.nii.gz`: Final preprocessed B0 image.
-  - `*_desc-brain_mask.nii.gz`: Final brain mask in original space.
+- `dataset_description.json`: Dataset metadata following BIDS specification.
+- `participants.tsv`: Table containing subject and session information.
+- `bundles_mean_stats.tsv`: Population-level bundle statistics (mean values across bundles).
+- `bundles_point_stats.tsv`: Population-level bundle statistics (point-wise metrics).
+- `cortical_{atlas}_area_{lh,rh}.tsv`: Population-level cortical surface area statistics per hemisphere.
+- `cortical_{atlas}_thickness_{lh,rh}.tsv`: Population-level cortical thickness statistics per hemisphere.
+- `cortical_{atlas}_volume_{lh,rh}.tsv`: Population-level cortical volume statistics per hemisphere.
+- `{atlas}_subcortical_volumes.tsv`: Population-level subcortical volume statistics.
+- `multiqc/`: Folder containing population-wide MultiQC report. For 
 
 </details>
 
-### **Local Modelling**
+---
+
+## **Subject-specific outputs**
+
+### `anat`
+
+The `anat/` folder contains all anatomical preprocessing outputs, tissue segmentation masks, parcellation labels, and cortical/subcortical statistics.
 
 <details markdown="1">
 <summary>Output files</summary>
 
-- `dwi/`
-  - `*_{space-template}_desc-ad.nii.gz`: Axial Diffusivity map.
-  - `*_{space-template}_desc-rd.nii.gz`: Radial Diffusivity map.
-  - `*_{space-template}_desc-md.nii.gz`: Mean Diffusivity map.
-  - `*_{space-template}_desc-fa.nii.gz`: Fractional Anisotropy map.
-  - `*_{space-template}_desc-mode.nii.gz`: Mode map.
-  - `*_{space-template}_desc-ga.nii.gz`: Geodesic Anisometry map.
-  - `*_desc-tensor.nii.gz`: Tensor map.
-  - `*_{space-template}_desc-rgb.nii.gz`: RGB map.
-  - `*_desc-fodf.nii.gz`: Fiber oriented distribution functions (fODF).
-  - `*_{space-template}_desc-afd_max.nii.gz`: Maximum apparent fiber density (AFD) map.
-  - `*_{space-template}_desc-afd_sum.nii.gz`: Sum of the AFD map.
-  - `*_{space-template}_desc-afd_total.nii.gz`: AFD total map.
-  - `*_{space-template}_desc-nufo.nii.gz`: Number of fiber orientation map.
-  - `*_desc-peaks.nii.gz`: fODF peaks.
+#### Preprocessed anatomical images
+
+- `*_space-{T1w,T2w}_desc-preproc_T1w.nii.gz`: Preprocessed T1w image in T1w or T2w space.
+- `*_space-{T1w,T2w}_desc-preproc_T2w.nii.gz`: Preprocessed T2w image in T1w or T2w space.
+- `*_space-{T1w,T2w}_desc-brain_mask.nii.gz`: Brain mask in T1w or T2w space.
+
+#### Registered anatomical images in diffusion space
+
+- `*_space-DWI_desc-preproc_{T1w,T2w}.nii.gz`: Preprocessed T1w/T2w image in diffusion space.
+
+#### Registered anatomical images in template space
+
+- `*_space-{template}_desc-preproc_{T1w,T2w}.nii.gz`: Preprocessed T1w/T2w image in template space (e.g., MNIInfant).
+
+#### Tissue segmentation
+
+- `*_space-DWI_label-{WM,GM,CSF}_mask.nii.gz`: Binary tissue masks in diffusion space.
+- `*_space-DWI_label-{WM,GM,CSF}_probseg.nii.gz`: Tissue probability maps in diffusion space.
+- `*_space-{template}_label-{WM,GM,CSF}_mask.nii.gz`: Binary tissue masks in template space.
+- `*_space-{template}_label-{WM,GM,CSF}_probseg.nii.gz`: Tissue probability maps in template space.
+
+#### Parcellation and segmentation
+
+- `*_seg-{atlas}_desc-labels_dseg.json`: JSON file containing atlas label information.
+- `*_seg-{atlas}_desc-labels_dseg.txt`: Text file containing atlas label information.
+- `*_seg-{atlas}_dseg.nii.gz`: Atlas parcellation in native anatomical space.
+- `*_seg-{atlas}_desc-dilated_dseg.nii.gz`: Dilated atlas parcellation in native anatomical space.
+- `*_space-DWI_seg-{atlas}_dseg.nii.gz`: Atlas parcellation in diffusion space.
+- `*_space-{template}_seg-{atlas}_dseg.nii.gz`: Atlas parcellation in template space.
+
+#### Cortical and subcortical statistics
+
+- `*_seg-{atlas}_hemi-{left,right}_stat-surfacearea.tsv`: Cortical surface area per region.
+- `*_seg-{atlas}_hemi-{left,right}_stat-thickness.tsv`: Cortical thickness per region.
+- `*_seg-{atlas}_hemi-{left,right}_stat-volume.tsv`: Cortical volume per region.
+- `*_seg-{atlas}_stat-subcortical.tsv`: Subcortical structure volumes.
 
 </details>
 
-### **Registration**
+---
+
+### `dwi`
+
+The `dwi/` folder contains diffusion preprocessing outputs, local modeling results (DTI and fODF metrics), tractography outputs, bundles, and connectivity matrices.
 
 <details markdown="1">
 <summary>Output files</summary>
 
-- `anat/`
-  - `*_from-{T2w,T1w}_to-dwi_affine.mat`: Affine transform from T1w/T2w space to diffusion space.
-  - `*_from-{T2w,T1w}_to-dwi_warp.nii.gz`: Non-linear transform from T1w/T2w space to diffusion space.
-  - `*_from-dwi_to-{T2w,T1w}_warp.nii.gz`: Non-linear transform from diffusion space to T1w/T2w space.
-  - `*_space-DWI_desc-preproc_{T2w,T1w}.nii.gz`: Preprocessed T1w/T2w image in diffusion space.
+#### Preprocessed diffusion images
+
+- `*_desc-preproc_dwi.nii.gz`: Preprocessed DWI image.
+- `*_desc-preproc_dwi.bval`: Final b-values file.
+- `*_desc-preproc_dwi.bvec`: Final corrected b-vectors file.
+- `*_desc-preproc_b0.nii.gz`: Mean B0 image.
+- `*_desc-brain_mask.nii.gz`: Brain mask in diffusion space.
+
+#### Local modeling: DTI metrics
+
+- `*_model-tensor_param-fa_dwimap.nii.gz`: Fractional Anisotropy (FA) map in native diffusion space.
+- `*_model-tensor_param-md_dwimap.nii.gz`: Mean Diffusivity (MD) map in native diffusion space.
+- `*_model-tensor_param-ad_dwimap.nii.gz`: Axial Diffusivity (AD) map in native diffusion space.
+- `*_model-tensor_param-rd_dwimap.nii.gz`: Radial Diffusivity (RD) map in native diffusion space.
+- `*_model-tensor_param-mode_dwimap.nii.gz`: Mode map in native diffusion space.
+- `*_model-tensor_param-ga_dwimap.nii.gz`: Geodesic Anisotropy (GA) map in native diffusion space.
+- `*_model-tensor_param-rgb_dwimap.nii.gz`: Color-coded directional FA map in native diffusion space.
+- `*_model-tensor_param-diffusivity_dwimap.nii.gz`: Tensor diffusivity in native diffusion space.
+- `*_space-{template}_model-tensor_param-{fa,md,ad,rd,mode,ga,rgb}_dwimap.nii.gz`: DTI metrics in template space.
+
+#### Local modeling: fODF metrics
+
+- `*_model-csd_param-sh_dwimap.nii.gz`: Fiber orientation distribution functions (fODF) in native diffusion space.
+- `*_model-csd_param-peaks_dwimap.nii.gz`: fODF peaks in native diffusion space.
+- `*_model-csd_param-afdmax_dwimap.nii.gz`: Maximum apparent fiber density (AFD) in native diffusion space.
+- `*_model-csd_param-afdsum_dwimap.nii.gz`: Sum of AFD across peaks in native diffusion space.
+- `*_model-csd_param-afdtotal_dwimap.nii.gz`: Total AFD in native diffusion space.
+- `*_model-csd_param-nufo_dwimap.nii.gz`: Number of fiber orientations (NuFO) in native diffusion space.
+- `*_space-{template}_model-csd_param-{afdmax,afdsum,afdtotal,nufo}_dwimap.nii.gz`: fODF-derived metrics in template space.
+- `*_frf.txt`: Fiber response function.
+
+#### Tractography
+
+- `*_tract-wholebrain_track-sdstream_tractogram.trk`: Whole-brain tractogram from the local tracking method in native diffusion space.
+- `*_tract-wholebrain_track-pft_tractogram.trk`: Whole-brain tractogram from the particle filter tracking (PFT) method in native diffusion space.
+- `*_tract-wholebrain_track-sdstream_desc-ensemble_tractogram.trk`: Whole-brain tractogram representing the concatenation of local and PFT methods in native diffusion space.
+- `*_space-{template}_tract-wholebrain_track-sdstream_tractogram.trk`: Whole-brain tractogram from local tracking in template space.
+- `*_space-{template}_tract-wholebrain_track-pft_tractogram.trk`: Whole-brain tractogram from PFT tracking in template space.
+- `*_space-{template}_tract-wholebrain_track-sdstream_desc-ensemble_tractogram.trk`: Whole-brain tractogram (ensemble) in template space.
+- `*_space-DWI_label-seeding_desc-local_mask.nii.gz`: Seeding mask for local tracking.
+- `*_space-DWI_label-tracking_desc-local_mask.nii.gz`: Tracking mask for local tracking.
+- `*_space-DWI_label-seeding_desc-pft_mask.nii.gz`: Seeding mask for PFT tracking.
+- `*_space-DWI_label-exclude_desc-pft_probseg.nii.gz`: Exclude probability map for PFT tracking.
+- `*_space-DWI_label-include_desc-pft_probseg.nii.gz`: Include probability map for PFT tracking.
+
+#### Bundles (in `bundles/` subdirectory)
+
+- `*_tract-{bundleName}_hemi-{left,right}_track-sdstream_tractogram.trk`: Individual bundle tractograms (cleaned, uniformized, and colored).
+
+#### Tractometry statistics
+
+- `*_desc-mean_stats.tsv`: Bundle-averaged metrics per subject.
+- `*_desc-point_stats.tsv`: Point-wise metrics along bundle profiles.
+
+#### Connectivity analysis
+
+- `*_tract-wholebrain_seg-{atlas}_desc-filtered_tractogram.h5`: Filtered whole-brain tractogram in native diffusion space.
+- `*_tract-wholebrain_seg-{atlas}_desc-preproc_tractogram.h5`: Preprocessed decomposed tractogram in native diffusion space.
+- `*_space-{template}_tract-wholebrain_seg-{atlas}_desc-filtered_tractogram.h5`: Filtered whole-brain tractogram in template space.
+- `*_space-{template}_tract-wholebrain_seg-{atlas}_desc-preproc_tractogram.h5`: Preprocessed decomposed tractogram in template space.
+- `*_seg-{atlas}_stat-{metric}.npy`: Connectivity matrices for various metrics (FA, MD, AD, RD, mode, streamline count, length, volume, AFD, NuFO, COMMIT weights, etc.).
 
 </details>
 
-### **Segmentation**
+---
+
+### `figures`
+
+The `figures/` folder contains quality control visualizations generated during processing.
 
 <details markdown="1">
 <summary>Output files</summary>
 
-- `anat/`
-  - `*_space-DWI_label-WM_mask.nii.gz`: WM mask in diffusion space.
-  - `*_space-DWI_label-GM_mask.nii.gz`: GM mask in diffusion space.
-  - `*_space-DWI_label-CSF_mask.nii.gz`: CSF mask in diffusion space.
-  - `*_space-DWI_label-WM_probseg.nii.gz`: WM probability map in diffusion space.
-  - `*_space-DWI_label-GM_probseg.nii.gz`: GM probability map in diffusion space.
-  - `*_space-DWI_label-CSF_probseg.nii.gz`: CSF probability map in diffusion space.
+- `*_coverage_overlay_mqc.png`: White matter coverage overlay on anatomical image.
+- `*_gradients_mqc.png`: Diffusion gradient sampling visualization.
+- `*_labels_mqc.png`: Parcellation labels overlay on anatomical image.
+- `*_metrics_mqc.png`: DTI metrics visualization.
+- `*_tissue_segmentation_mqc.png`: Tissue segmentation overlay.
+- `*_seg-{atlas}_stat-{metric}_matrix.png`: Connectivity matrix visualization for each metric.
+- `*_seg-{atlas}_stat-{metric}_histogram.png`: Histogram of connectivity values for each metric.
 
 </details>
 
-### **Tractography**
+### `xfm`
+
+The `xfm/` folder contains all spatial transformation files between different image spaces.
 
 <details markdown="1">
 <summary>Output files</summary>
 
-- `dwi/`
-  - `*_{space-template}_desc-local_tractogram.trk`: Whole-brain tractogram using local tractography.
-  - `*_{space-template}_desc-pft_tractogram.trk`: Whole-brain tractogram using PFT tractography.
-  - `*_{space-template}_desc-concatenated_tractogram.trk`: Whole-brain tractogram combining both PFT/local tracking.
-  - `*_space-DWI_label-exclude_desc-pft_probseg.nii.gz`: Exclude probability map for PFT tracking.
-  - `*_space-DWI_label-include_desc-pft_probseg.nii.gz`: Include probability map for PFT tracking.
-  - `*_space-DWI_label-seeding_desc-local_mask.nii.gz`: Seeding mask for local tracking.
-  - `*_space-DWI_label-tracking_desc-local_mask.nii.gz`: Tracking mask for local tracking.
-  - `*_space-DWI_label-seeding_desc-pft_mask.nii.gz`: Seeding mask for PFT tracking.
+#### Between anatomical spaces
+
+- `*_from-T1w_to-T2w_mode-image_desc-affine_xfm.mat`: Affine transform from T1w to T2w space.
+- `*_from-T2w_to-T1w_mode-image_desc-affine_xfm.mat`: Affine transform from T2w to T1w space.
+
+#### To diffusion space
+
+- `*_from-{T1w,T2w}_to-dwi_mode-image_desc-affine_xfm.mat`: Affine transform from anatomical to diffusion space.
+- `*_from-{T1w,T2w}_to-dwi_mode-image_desc-warp_xfm.nii.gz`: Non-linear transform from anatomical to diffusion space.
+
+#### From diffusion space
+
+- `*_from-dwi_to-{T1w,T2w}_mode-image_desc-warp_xfm.nii.gz`: Non-linear transform from diffusion to anatomical space.
+
+#### To template space
+
+- `*_from-dwi_to-{template}_mode-image_desc-affine_xfm.mat`: Affine transform from diffusion to template space.
+- `*_from-dwi_to-{template}_mode-image_desc-warp_xfm.nii.gz`: Non-linear transform from diffusion to template space.
+
+#### From template space
+
+- `*_from-{template}_to-dwi_mode-image_desc-affine_xfm.mat`: Affine transform from template to diffusion space.
+- `*_from-{template}_to-dwi_mode-image_desc-warp_xfm.nii.gz`: Non-linear transform from template to diffusion space.
 
 </details>
 
-### **Bundling**
+---
+
+### `multiqc`
+
+The `multiqc/` folder contains subject-level HTML reports and associated data for quality control.
 
 <details markdown="1">
 <summary>Output files</summary>
 
-- `dwi/bundles/`
-  - `*_desc-{bundleName}.trk`: Single `.trk` file for each of the recognized bundle. Those are cleaned, uniformized, and colored (only affect visualization).
+- `*_{timestamp}.html`: Subject-level MultiQC HTML report.
+- `*_{timestamp}_data/`: Directory containing parsed statistics and raw data used in the report.
+- `*_{timestamp}_plots/`: Directory containing static plots in PDF, PNG, and SVG formats.
 
-- `dwi/`
-  - `*_desc-{statsName}.json`: Various `.json` file for each metric type containing values for each bundles for the current subject. Will be subject to change in the near future for `.tsv` files, which are easier to work with in subsequent statistical analysis.
-
-</details>
-
-### **Connectomics**
-
-<details markdown="1">
-<summary>Output files</summary>
-
-- `dwi/`
-  - `*_{space-template}_seg-{BrainnetomeChild,DKT}_desc-filtered_tracking.{trk,h5}`: Filtered whole-brain tractogram.
-  - `*_{space-template}_seg-{BrainnetomeChild,DKT}_desc-preproc_tracking.h5`: Final preprocessed decomposed whole-brain tractogram.
-  - `*.npy`: Connectivity matrices for all supplied metrics.
-  - `*.png`: Connectivity matrices visualized as pngs.
-
-- `anat/`
-  - `*_space-DWI_seg-{BrainnetomeChild,DKT}_dseg.nii.gz`: Atlas labels in diffusion space. Name of the atlas might changed depending on which one is used.
+Subject-level reports display visual QC of key processing steps including sphere sampling, tissue segmentation, white matter coverage, label overlays, and metric maps.
 
 </details>
 
-### **FreeSurfer/FastSurfer/M-CRIB-S**
+---
 
-<details markdown="1">
-<summary>Output files</summary>
-
-- `anat/`
-  - `*_seg-BrainnetomeChild_desc-labels.json`: JSON file containing the labels information.
-  - `*_seg-BrainnetomeChild_desc-labels.txt`: Text file containing the labels information.
-  - `*_{space-template}_seg-BrainnetomeChild_dseg.nii.gz`: Atlas label file in subject original space.
-  - `*_seg-BrainnetomeChild_dseg_dilated`: Dilated atlas label file in subject original space.
-  - `*_seg-BrainnetomeChild_stat-subcortical.tsv`: Subcortical statistics file.
-  - `*_seg-BrainnetomeChild_stat-{lh,rh}_{area,thickness,volume}.tsv`: Left hemisphere statistics file.
-  - `*_seg-BrainnetomeChild_stat-{lh,rh}_{area,thickness,volume}.tsv`: Right hemisphere statistics file.
-
-</details>
-
-### **MultiQC**
-
-<details markdown="1">
-<summary>Output files</summary>
-
-- `multiqc/`
-  - `multiqc_report.html`: a standalone HTML file that can be viewed in your web browser.
-  - `multiqc_data/`: directory containing parsed statistics from the different tools used in the pipeline.
-  - `multiqc_plots/`: directory containing static images from the report in various formats.
-
-</details>
-
-[MultiQC](http://multiqc.info) is a visualization tool that generates HTML reports on the subject-level and reports on population-level statistics. In your output folder, you will find a global MultiQC report (located next to your `sub-XXXX` folders). This is the population level report, containing statistics allowing the evaluation of outliers in terms of white matter coverage, number of streamlines, and volume, thickness, and surface area for each regions of the GM parcellation.
-
-Within each subject folder, you will find subject-specific HTML reports. Those will display visual QC of some of the key processing steps performed during the pipeline execution. Those figures (for now) comprise: sphere sampling, tissue segmentation, white matter coverage, labels overlay on anatomical image, and metrics maps visualization. You can refer to those subject-specific reports to obtain a quick overview of the quality of the processing.
-
-### **Pipeline information**
-
-<details markdown="1">
-<summary>Output files</summary>
-
-- `pipeline_info/`
-  - Reports generated by Nextflow: `execution_report.html`, `execution_timeline.html`, `execution_trace.txt` and `pipeline_dag.dot`/`pipeline_dag.svg`.
-  - Reports generated by the pipeline: `pipeline_report.html`, `pipeline_report.txt` and `software_versions.yml`. The `pipeline_report*` files will only be present if the `--email` / `--email_on_fail` parameter's are used when running the pipeline.
-  - Parameters used by the pipeline run: `params.json`.
-
-</details>
-
-[Nextflow](https://www.nextflow.io/docs/latest/tracing.html) provides excellent functionality for generating various reports relevant to the running and execution of the pipeline. This will allow you to troubleshoot errors with the running of the pipeline, and also provide you with other information such as launch commands, run times and resource usage.
+[MultiQC](http://multiqc.info) is a visualization tool that generates HTML reports on the subject-level and reports on population-level statistics. In your output folder, you will find a global MultiQC report (located next to your `sub-XXXX` folders). This is the population level report, containing statistics allowing the evaluation of outliers in terms of white matter coverage, number of streamlines, and volume, thickness, and surface area for each regions of the GM parcellation. For a complete guide on how to navigate these reports, please refer to the [navigating the QC reports section](/sf-pediatric/guides/qc).
