--- a/src/content/docs/guides/priors.mdx
+++ b/src/content/docs/guides/priors.mdx
@@ -10,7 +10,7 @@ One innovative feature of `sf-pediatric` is how it uses normative curves of diff
 ![curves](../../../assets/normative_curves_and_rawdata.png)
 
 :::note
-While only the FRF and COMMIT priors are currently supported using normative curves, we are working to extend this method to other processing aspects to ensure the most optimal age appropriate processing of diffusion MRI acquisitions.
+While only the FRF, COMMIT, Freewater Elimination, and NODDI priors are currently supported using normative curves, we are working to extend this method to other processing aspects to ensure the most optimal age appropriate processing of diffusion MRI acquisitions. If you would like to see a new use case implemented, feel free to [open an issue on GitHub](https://github.com/scilus/sf-pediatric.git).
 :::
 
-Each of those median normative curves were approximate using single equations, and implemented into `sf-pediatric`. While this is the default option, users can still specify their own FRF using the parameter [`--frf_manual_frf`](/sf-pediatric/guides/parameters/#frf-options). Similarly, COMMIT priors can be specified with [`--commit_para_diff`](/sf-pediatric/guides/parameters/#commit-options), [`--commit_perp_diff`](/sf-pediatric/guides/parameters/#commit-options), and [`--commit_iso_diff`](/sf-pediatric/guides/parameters/#commit-options).
+Each of those median normative curves were approximate using single equations, and implemented into `sf-pediatric`. While this is the default option, users can still specify their own FRF using the parameter [`--frf_manual_frf`](/sf-pediatric/guides/parameters/#frf-options). Similarly, Freewater Elimination, NODDI, and COMMIT priors can be specified with [`--para_diff`](/sf-pediatric/guides/parameters/#diffusivities-options), [`--perp_diff`](/sf-pediatric/guides/parameters/#diffusivities-options), [`--iso_diff`](/sf-pediatric/guides/parameters/#diffusivities-options), [`--perp_diff_min`](/sf-pediatric/guides/parameters/#diffusivities-options), and [`--perp_diff_max`](/sf-pediatric/guides/parameters/#diffusivities-options).
