add bash upgrade instructions for mac users

--- a/src/content/docs/guides/installation.mdx
+++ b/src/content/docs/guides/installation.mdx
@@ -10,6 +10,12 @@ import CommandOutputs from '../../../components/CommandOutputs.astro';
 
 While you do not need to install every software used within `sf-pediatric`, there is two core dependencies that need to be available at runtime: 
 
+:::caution[For MacOS Users]
+MacOS users should also upgrade their bash version to at least `4.3`. To do so, you can use Homebrew as [described here](https://apple.stackexchange.com/questions/193411/update-bash-to-version-4-0-on-osx). If you don't have Homebrew installed, you can [follow the instructions on their documentation here](http://brew.sh/). To upgrade to the latest bash version, run this command:
+```bash
+brew install bash
+```
+:::
 
 <Steps>
 
